--- a/DocsVision_Test-master/Registration/Registration.WPF/Views/LetterViewWindow.xaml
+++ b/DocsVision_Test-master/Registration/Registration.WPF/Views/LetterViewWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Registration.WPF.Views.FullContentLetterWindow"
+﻿<Window x:Class="Registration.WPF.Views.LetterViewWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
