--- a/DocsVision_Test-master/Registration/Registration.WPF/Views/MakeFolderWindow.xaml
+++ b/DocsVision_Test-master/Registration/Registration.WPF/Views/MakeFolderWindow.xaml
@@ -4,24 +4,11 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Registration.WPF.Views"
-          xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
         mc:Ignorable="d"
         Title="MakeFolderWindow" Height="300" Width="300">
     <Grid>
-        <ContentPresenter Content="{Binding }" />
-        
         <Button x:Name="button" Content="Cancel" HorizontalAlignment="Left" Margin="207,239,0,0" VerticalAlignment="Top" Width="75"/>
-        <Button x:Name="button_Copy" Content="Create" HorizontalAlignment="Left" IsDefault="True" Margin="114,239,0,0" VerticalAlignment="Top" Width="75"/>
-        <StackPanel x:Name="stackPanel" HorizontalAlignment="Left" Height="234" VerticalAlignment="Top" Width="292"/>
-        <i:Interaction.Triggers>
-            <i:EventTrigger EventName="DataContextChange">
-                <i:InvokeCommandAction
-                           Command="{Binding Path=DataContextChange}"
-                CommandParameter="{Binding ElementName=BriefContentLetters, Path=SelectedValue}" />
-            </i:EventTrigger>
-        </i:Interaction.Triggers>
-
-
-
+        <Button x:Name="button_Copy" Content="Create" HorizontalAlignment="Left" IsDefault="True" Margin="114,239,0,0" VerticalAlignment="Top" Width="75" Command="{Binding Path=CreateFolder}"/>
+        <StackPanel x:Name="stackPanel" HorizontalAlignment="Left" Height="234" VerticalAlignment="Top" Width="292" />
     </Grid>
 </Window>
