added interface for make letter window

--- a/DocsVision_Test-master/Registration/Registration.WPF/Views/Controls/CreateFolderControl.xaml
+++ b/DocsVision_Test-master/Registration/Registration.WPF/Views/Controls/CreateFolderControl.xaml
@@ -17,7 +17,7 @@
          <i:Interaction.Triggers>
                 <i:EventTrigger EventName="SelectionChanged">
                     <i:InvokeCommandAction
-                               Command="{Binding DataContextChange}"
+                               Command="{Binding FolderTypeChanged}"
                     CommandParameter="{Binding ElementName=comboType, Path=SelectedValue}" />
                 </i:EventTrigger>
             </i:Interaction.Triggers>
