--- a/DocsVision_Test-master/Registration/Registration.WPF/Views/RenameFolderWindow.xaml
+++ b/DocsVision_Test-master/Registration/Registration.WPF/Views/RenameFolderWindow.xaml
@@ -9,7 +9,7 @@
     <Grid>
         <Label x:Name="labelName" Content="Name" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
         <TextBox x:Name="txtNewName" HorizontalAlignment="Left" Height="23" Margin="64,13,0,0" TextWrapping="Wrap" Text="{Binding Path=Name}" VerticalAlignment="Top" Width="170"/>
-        <Button x:Name="button" IsDefault="true" Content="Save" HorizontalAlignment="Left" Margin="75,44,0,0" VerticalAlignment="Top" Width="75" Command="{Binding Path=RenameFolder}"/>
+        <Button x:Name="button" IsDefault="true" Content="Save" HorizontalAlignment="Left" Margin="75,44,0,0" VerticalAlignment="Top" Width="75" Click="SaveButton_Click" Command="{Binding Path=RenameFolder}"/>
         <Button x:Name="button_Copy" IsCancel="true" Content="Cancel" HorizontalAlignment="Left" Margin="159,44,0,0" VerticalAlignment="Top" Width="75"/>
 
     </Grid>
