--- a/DocsVision_Test-master/Registration/Registration.WPF/Views/Controls/StandartLetterControl.xaml
+++ b/DocsVision_Test-master/Registration/Registration.WPF/Views/Controls/StandartLetterControl.xaml
@@ -17,7 +17,7 @@
         <TextBox x:Name="message" HorizontalAlignment="Left" Height="296" Margin="10,194,0,0" TextWrapping="Wrap" IsReadOnly="{Binding Path=ReadOnly}" Text="{Binding Path=Text, Mode=TwoWay}" VerticalAlignment="Top" Width="294"/>
         <Label x:Name="label1" Content="Date" HorizontalAlignment="Left" Margin="373,10,0,0" VerticalAlignment="Top"/>
         <TextBox x:Name="date" HorizontalAlignment="Left" Height="25" Margin="373,36,0,0" TextWrapping="Wrap" IsReadOnly="{Binding Path=ReadOnly}" Text="{Binding Path=Date, Mode=TwoWay}" VerticalAlignment="Top" Width="128"/>
-        <local:WorkersEditorControl x:Name="workersEditorControl" HorizontalAlignment="Left" Margin="10,137,0,0" VerticalAlignment="Top" Width="294"/>
+        <local:WorkersEditorControl x:Name="workersEditorControl" HorizontalAlignment="Left" Margin="10,137,0,0" VerticalAlignment="Top" Width="294" RenderTransformOrigin="0.497,0.617" Height="52"/>
 
     </Grid>
 </UserControl>
