--- a/DocsVision_Test-master/Registration/Registration.WPF/Views/Controls/ImportanceDegreeEditorControl.xaml
+++ b/DocsVision_Test-master/Registration/Registration.WPF/Views/Controls/ImportanceDegreeEditorControl.xaml
@@ -7,6 +7,6 @@
              mc:Ignorable="d" 
              d:DesignHeight="30" d:DesignWidth="128">
     <Grid>
-        <ComboBox x:Name="comboImportanceDegree" ItemsSource="{Binding ImportanceDegrees.Values}" SelectedValue="{Binding Path=SelectedImportanceDegree}" IsEnabled="{Binding Path=Enable}" HorizontalAlignment="Left" Height="25" VerticalAlignment="Top" Width="128"/>
+        <ComboBox x:Name="comboImportanceDegree" ItemsSource="{Binding ImportanceDegrees.Values}" SelectedItem="{Binding Path=NameSelectedDegree}" IsEnabled="{Binding Path=Enable}" HorizontalAlignment="Left" Height="25" VerticalAlignment="Top" Width="128"/>
     </Grid>
 </UserControl>
