--- a/DocsVision_Test-master/Registration/Registration.WPF/Views/MakeLetterWindow.xaml
+++ b/DocsVision_Test-master/Registration/Registration.WPF/Views/MakeLetterWindow.xaml
@@ -5,11 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Registration.WPF.Views"
         mc:Ignorable="d"
-        Title="MakeLetterWindow" Height="600" Width="601">
-    <Grid Margin="0,0,-8,-4">
-        <Button x:Name="button" IsCancel="true" Content="Cancel" HorizontalAlignment="Left" Margin="502,540,0,0" VerticalAlignment="Top" Width="76"/>
-        <Button x:Name="button_Copy" Content="Send" HorizontalAlignment="Left" Margin="408,540,0,0" Command="{Binding Path=SendLetterClick}" VerticalAlignment="Top" Width="76" RenderTransformOrigin="1.921,0.875"/>
-        <StackPanel x:Name="stackPanel"  HorizontalAlignment="Left" Height="519" VerticalAlignment="Top" Width="591"/>
+        Title="MakeLetterWindow" Height="600" Width="559">
+    <Grid Margin="0,0,-50,-4">
+        <Button x:Name="button" IsCancel="true" Content="Cancel" HorizontalAlignment="Left" Margin="426,534,0,0" VerticalAlignment="Top" Width="76"/>
+        <Button x:Name="button_Copy" Content="Send" HorizontalAlignment="Left" Margin="332,534,0,0" Command="{Binding Path=SendLetterClick}" VerticalAlignment="Top" Width="76" RenderTransformOrigin="1.921,0.875"/>
+        <StackPanel x:Name="stackPanel"  HorizontalAlignment="Left" Width="549" Margin="0,0,0,54"/>
 
     </Grid>
 </Window>
