fixed bug in the constructed hierarchy

--- a/DocsVision_Test-master/Registration/Registration.WPF/MainWindow.xaml
+++ b/DocsVision_Test-master/Registration/Registration.WPF/MainWindow.xaml
@@ -50,7 +50,7 @@
                     <i:EventTrigger EventName="SelectedItemChanged">
                         <i:InvokeCommandAction
                            Command="{Binding SelectedItemChanged}"
-                           CommandParameter="{Binding SelectedValue, ElementName=TV}" />
+                           CommandParameter="{Binding SelectedItem, ElementName=TV}" />
                     </i:EventTrigger>
 
                     <!--    <i:EventTrigger EventName="MouseRightButtonDown">
