--- a/DocsVision_Test-master/Registration/Registration.WPF/Views/LetterViewWindow.xaml
+++ b/DocsVision_Test-master/Registration/Registration.WPF/Views/LetterViewWindow.xaml
@@ -9,7 +9,7 @@
         Title="FullContentLetterWindow" Height="540" Width="557" WindowStartupLocation="CenterScreen">
     <Grid>
         <Menu Name="Menu" Height="20"  VerticalAlignment="Top">
-            <MenuItem Header="Delete Letter">
+            <MenuItem Header="Delete Letter" Command="{Binding Path=DeleteLetter}">
                 <MenuItem.Icon>
                     <Image Source="C:\Users\Ivanova.M\Downloads\DeleteLetter.png"/>
                 </MenuItem.Icon>
