--- a/DocsVision_Test-master/Registration/Registration.WPF/Views/Controls/UnreadFolderControl.xaml
+++ b/DocsVision_Test-master/Registration/Registration.WPF/Views/Controls/UnreadFolderControl.xaml
@@ -7,7 +7,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="64" d:DesignWidth="232">
     <Grid>
-        <local:CreateFolderControl HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <local:CreateFolderControl x:Name="createFolderControl" HorizontalAlignment="Left" VerticalAlignment="Top"/>
 
     </Grid>
 </UserControl>
