--- a/DocsVision_Test-master/Registration/Registration.WPF/Views/Controls/LetterWithResponseTimeControl.xaml
+++ b/DocsVision_Test-master/Registration/Registration.WPF/Views/Controls/LetterWithResponseTimeControl.xaml
@@ -7,7 +7,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="500" d:DesignWidth="544">
     <Grid>
-        <local:StandartLetterControl HorizontalAlignment="Left" Margin="10,2,0,0" VerticalAlignment="Top"/>
+        <local:StandartLetterControl x:Name="fullContentLetterControl" HorizontalAlignment="Left" Margin="10,2,0,0" VerticalAlignment="Top"/>
         <Label x:Name="lblDataOfResponseReq" Content="Date of response required" HorizontalAlignment="Left" Margin="382,60,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.478,-2.038"/>
         <DatePicker x:Name="dataPickerLetter" HorizontalAlignment="Left" Margin="384,86,0,0" IsEnabled="{Binding Path=Enable}" SelectedDate="{Binding Path=ReminderLetterData}" VerticalAlignment="Top" Width="128" Height="25"/>
 
