load window in senter screen for all windows

--- a/DocsVision_Test-master/Registration/Registration.WPF/Views/Controls/WorkersEditorControl.xaml
+++ b/DocsVision_Test-master/Registration/Registration.WPF/Views/Controls/WorkersEditorControl.xaml
@@ -22,7 +22,7 @@
             </TextBox.InputBindings>
         </TextBox>
         <Button x:Name="btnAllWorkers" Content="..." HorizontalAlignment="Left" Height="22" Margin="265,1,-81,0" VerticalAlignment="Top" Width="27" Visibility="{Binding Path=Enable}" Command="{Binding Path=AddSeveralWorkers}"/>
-        <ListBox x:Name="listWorkers" HorizontalAlignment="Left" ItemsSource="{Binding AllWorkers}" Visibility="{Binding Path=Enable}" Margin="0,23,-81,0" Width="292" Focusable="{Binding Path=Focus}">
+        <ListBox x:Name="listWorkers" HorizontalAlignment="Left" ItemsSource="{Binding AllWorkers}" Visibility="{Binding Path=Enable}" Margin="0,23,-81,0" Width="292" SelectedItem="{Binding Path=SelectedWorker}">
             <!-- <i:Interaction.Triggers>
                 <i:EventTrigger EventName="SelectionChanged">
                     <i:InvokeCommandAction
@@ -36,8 +36,6 @@
                             CommandParameter="{Binding ElementName=listWorkers, Path=SelectedValue}"/>
                 <KeyBinding Command="{Binding Path=ChangeEndOfNamesString}" Key="Backspace" 
                           />
-                <KeyBinding Command="{Binding Path=FocusToListBox}" Key="Down" 
-                            CommandParameter="{Binding ElementName=listWorkers, Path=SelectedValue}"/>
                 <MouseBinding Command="{Binding Path=AddWorker}" MouseAction="LeftDoubleClick"
                               CommandParameter="{Binding ElementName=listWorkers, Path=SelectedValue}"/>
             </ListBox.InputBindings>
